k8s/example/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crow-example
  namespace: default
  labels:
    app.kubernetes.io/name: crow
    app.kubernetes.io/instance: crow-example
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: crow
      app.kubernetes.io/instance: crow-example
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crow
        app.kubernetes.io/instance: crow-example
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: crow-example
          image: pando85/crow:latest
          ports:
            - name: http
              containerPort: 8082
              protocol: TCP
          securityContext:
            {}
          readinessProbe:
            httpGet:
              path: /health
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 50m
              memory: 64Mi
            requests:
              cpu: 25m
              memory: 64Mi
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: crow
              app.kubernetes.io/instance: crow-example
