k8s/example/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: crow-example
  namespace: default
  labels:
    app.kubernetes.io/name: crow
    app.kubernetes.io/instance: crow-example
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: crow
    app.kubernetes.io/instance: crow-example
