k8s/example/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crow-example
  namespace: default
  labels:
    app.kubernetes.io/name: crow
    app.kubernetes.io/instance: crow-example
spec:
  ingressClassName: nginx-integration
  tls:
    - hosts:
        - crow.example.com
  rules:
    - host: crow.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name:  crow-example
              port:
                number: 8888
